2011-07-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-detect-coding-region): Use with-coding-priority.
	(w3m-make-ccl-coding-system): Silence the byte compiler.

2011-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-switch-to-buffer): New function.

	* w3m-bookmark.el (w3m-bookmark-add-all-urls):
	* w3m-ems.el (w3m-tab-drag-mouse-function)
	(w3m-tab-click-mouse-function, w3m-tab-next-buffer)
	(w3m-tab-make-keymap):
	* w3m-form.el (w3m-form-input-textarea, w3m-form-input-select)
	(w3m-form-input-map):
	* w3m-session.el (w3m-session-select):
	* w3m-tabmenu.el (w3m-switch-buffer, w3m-tab-menubar-open-item):
	* w3m-util.el (w3m-popup-buffer, w3m-make-menu-commands):
	* w3m.el (w3m-next-buffer, w3m-move-unseen-buffer)
	(w3m-goto-url-new-session, w3m-reload-all-pages): Use it.

2011-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-mailto-url): Pass other headers to the agent.
	Suggested by Dan Jacobson <jidanni@jidanni.org>.

2011-07-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-interactive-p): New macro.

	* w3m.el (w3m-toggle-inline-image, w3m-toggle-inline-images)
	(w3m-goto-url, w3m-safe-view-this-url):
	* w3m-hist.el (w3m-history-store-position)
	(w3m-history-restore-position): Use it.

	* w3m-ems.el (w3m-toolbar-define-keys): Work around the Emacs 24 error
	"`keymap' is reserved for embedded parent maps".

2011-05-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-form-hint): Give point as arg to w3m-submit to
	prevent cursor from being caught in form area.

2011-04-20  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el: Fix description comment style.

2011-04-13  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el: Use lexical binding.
	(ptexinfmt-broken-facility): Rename _dummy argument.
	(texinfo-enclosure-list, texinfo-alias-list): Add defvar stub for
	lexical binding.

2011-03-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
